# paper-trading

./: .env.example  .gitignore  README.md  check_all.sh  pyproject.toml
.github/workflows/: ledger-rollup-weekly.yml  mock-backtest-year.yml  paper-crypto-weekend.yml  paper-market-close-report.yml  paper-premarket-prep.yml  paper-robustness-daily.yml  paper-scheduled-tick.yml  tests.yml  top-daytrading.yml  train-ml-daily.yml
launchd/: com.emilyfehr8.alpaca-day-bot.plist
scripts/: day_update.py  force_flatten_stale.py  get_summary.py  refresh_local_ml_models.sh  run-paper-bot.sh  run_day_session_local.sh
src/alpaca_day_bot/: __main__.py  backtest.py  config.py  logging_utils.py  main.py  options_sim.py  universe.py  watch_trades.py  ws_retry.py
src/alpaca_day_bot/data/: crypto_rest_bars.py  historical_crypto.py  historical_equity.py  news.py  rest_bars.py  stream.py  taapi.py  tvta.py
src/alpaca_day_bot/ml/: dataset.py  eval.py  executed_dataset.py  infer.py  regime_thresholds.py  sim_dataset.py  targets.py  train.py
tests/: test_feature_vector_guard.py  test_ledger_label_backlog.py  test_ml_bundle_accept.py  test_ml_feature_vector.py  test_train_e2e_synthetic_db.py  test_triple_barrier_yfinance.py
tools/: merge_ledger_artifacts_2026.py  merge_sim_rollups.py  rollup_ledger.py  run_mock_backtest_year.py  train_models_from_sim.py
tv-ta-api/: Dockerfile  README.md  render.yaml  requirements.txt
tv-ta-api/app/: __main__.py  available_indicators.py  cache.py  data_provider.py  indicators.py  main.py  models.py  screeners.py  settings.py  signals.py  symbols.py
tv-ta-api/scripts/: run_top_daytrading.py
(+26 files in other folders)
